--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "filp/whoops": "~1.1",
     "illuminate/database": "~5.0",
     "league/csv": "~7.0",
-    "guzzlehttp/guzzle": "~5.2"
+    "guzzlehttp/guzzle": "~5.2",
+    "mnapoli/silly": "~1.1"
   },
   "autoload": {
     "psr-4": {
