--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
     "illuminate/database": "~5.0",
     "league/csv": "~7.0",
     "guzzlehttp/guzzle": "~5.2",
-    "mnapoli/silly": "~1.1"
+    "mnapoli/silly": "~1.1",
+    "illuminate/cache": "~5.0",
+    "illuminate/filesystem": "~5.0"
   },
   "autoload": {
     "psr-4": {
