--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     }
   ],
   "require-dev": {
-    "symfony/var-dumper": "~2.6"
+    "symfony/var-dumper": "~2.6",
+    "psy/psysh": "0.4.*"
   }
 }
