--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,17 @@
     "guzzlehttp/guzzle": "~5.2",
     "rcrowe/twigbridge": "0.7.*",
     "symfony/dom-crawler": "~2.6",
-    "symfony/css-selector": "~2.6"
+    "symfony/css-selector": "~2.6",
+    "laravelcollective/annotations": "~5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
     "phpspec/phpspec": "~2.1",
     "laracasts/generators": "~1.1",
     "symfony/var-dumper": "~2.6",
-    "barryvdh/laravel-debugbar": "~2.0"
+    "barryvdh/laravel-debugbar": "~2.0",
+    "barryvdh/laravel-ide-helper": "~2.0",
+    "doctrine/dbal": "~2.5"
   },
   "autoload": {
     "classmap": [
