--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "rcrowe/twigbridge": "0.7.*",
     "symfony/dom-crawler": "~2.6",
     "symfony/css-selector": "~2.6",
-    "laravelcollective/annotations": "~5.0"
+    "laravelcollective/annotations": "~5.0",
+    "guidovanbiemen/laravel-whoops": "~1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
