--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "symfony/dom-crawler": "~2.6",
     "symfony/css-selector": "~2.6",
     "laravelcollective/annotations": "~5.0",
-    "guidovanbiemen/laravel-whoops": "~1.0"
+    "guidovanbiemen/laravel-whoops": "~1.0",
+    "anahkiasen/former": "4.0.*@dev"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
