--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "symfony/css-selector": "~2.6",
     "laravelcollective/annotations": "~5.0",
     "guidovanbiemen/laravel-whoops": "~1.0",
-    "anahkiasen/former": "4.0.*@dev"
+    "anahkiasen/former": "4.0.*@dev",
+    "anahkiasen/arrounded": "0.6.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
