--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0"
+  },
+  "devDependencies": {
+    "gulp-load-plugins": "^0.10.0"
   }
 }
