--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "notetracker",
+  "name": "furnace",
+  "repository": "https://github.com/Anahkiasen/furnace",
   "dependencies": {
     "bower": "^1.4.1",
     "gulp": "^3.8.11",
@@ -17,6 +18,7 @@
     "gulp-uglify": "^1.1.0"
   },
   "devDependencies": {
+    "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^0.10.0"
   }
 }
