--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "angular": "~1.3.15",
     "jquery": "~2.1.3",
     "jquery.tablesorter": "~2.21.5",
-    "bootswatch": "~3.3.4+1",
+    "bootswatch": "~3.3.4",
     "selectize": "~0.12.1"
   }
 }
