Work on tracks.show

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 .env
 
+# Cached and compiled
 public/builds
-
-public/components
-/node_modules
-/vendor
 .phpstorm.meta.php
 _ide_helper.php
 _ide_helper_models.php
+storage/framework
+
+# Dependencies
+public/components
+/node_modules
+/vendor
