--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "laravelcollective/annotations": "~5.0",
     "guidovanbiemen/laravel-whoops": "~1.0",
     "anahkiasen/former": "4.0.*@dev",
-    "anahkiasen/arrounded": "0.6.*"
+    "anahkiasen/arrounded": "0.6.*",
+    "laravel/socialite": "~2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
