--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "anahkiasen/former": "4.0.*@dev",
     "anahkiasen/arrounded": "0.6.*",
     "laravel/socialite": "~2.0",
-    "mathiasgrimm/laravel-dot-env-gen": "0.8.*"
+    "mathiasgrimm/laravel-dot-env-gen": "0.8.*",
+    "creativeorange/gravatar": "~1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
