--- a/phpspec.yml
+++ b/phpspec.yml
@@ -3,3 +3,9 @@ suites:
         namespace: Furnace
         psr4_prefix: Furnace
         src_path: app
+        spec_path: tests/phpspec
+extensions:
+    - PhpSpec\Laravel\Extension\LaravelExtension
+laravel_extension:
+    migrate_db: false
+    testing_environment: 'testing'
