--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "laravel/socialite": "~2.0",
     "mathiasgrimm/laravel-dot-env-gen": "0.8.*",
     "creativeorange/gravatar": "~1.0",
-    "cviebrock/eloquent-sluggable": ">=3.0.0-alpha"
+    "cviebrock/eloquent-sluggable": ">=3.0.0-alpha",
+    "madewithlove/elasticsearcher": "0.2.*@dev"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
