--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "mathiasgrimm/laravel-dot-env-gen": "0.8.*",
     "creativeorange/gravatar": "~1.0",
     "cviebrock/eloquent-sluggable": ">=3.0.0-alpha",
-    "madewithlove/elasticsearcher": "0.2.*@dev"
+    "madewithlove/elasticsearcher": "0.2.*@dev",
+    "league/fractal": "0.12.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
