--- a/composer.json
+++ b/composer.json
@@ -9,34 +9,34 @@
   "type": "project",
   "require": {
     "laravel/framework": "5.0.*",
-    "league/csv": "~7.0",
-    "guzzlehttp/guzzle": "~5.2",
-    "rcrowe/twigbridge": "0.7.*",
-    "symfony/dom-crawler": "~2.6",
-    "symfony/css-selector": "~2.6",
-    "laravelcollective/annotations": "~5.0",
-    "guidovanbiemen/laravel-whoops": "~1.0",
+    "anahkiasen/arrounded": "^0.6.0",
     "anahkiasen/former": "4.0.*@dev",
-    "anahkiasen/arrounded": "0.6.*",
-    "laravel/socialite": "~2.0",
-    "mathiasgrimm/laravel-dot-env-gen": "0.8.*",
-    "creativeorange/gravatar": "~1.0",
+    "creativeorange/gravatar": "^1.0",
     "cviebrock/eloquent-sluggable": ">=3.0.0-alpha",
+    "guidovanbiemen/laravel-whoops": "^1.0",
+    "guzzlehttp/guzzle": "^5.2",
+    "laravel/socialite": "^2.0",
+    "laravelcollective/annotations": "^5.0",
+    "league/csv": "^7.1",
+    "league/fractal": "^0.12.0",
     "madewithlove/elasticsearcher": "0.2.*@dev",
-    "league/fractal": "0.12.*",
-    "predis/predis": "~1.0"
+    "mathiasgrimm/laravel-dot-env-gen": "^0.8.0",
+    "predis/predis": "^1.0",
+    "rcrowe/twigbridge": "^0.7.1",
+    "symfony/css-selector": "^2.6",
+    "symfony/dom-crawler": "^2.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0",
-    "phpspec/phpspec": "~2.1",
-    "laracasts/generators": "~1.1",
-    "symfony/var-dumper": "~2.6",
-    "barryvdh/laravel-debugbar": "~2.0",
-    "barryvdh/laravel-ide-helper": "~2.0",
-    "doctrine/dbal": "~2.5",
-    "benconstable/phpspec-laravel": "~2.0",
-    "league/factory-muffin": "~2.1",
-    "mockery/mockery": "0.9.*"
+    "barryvdh/laravel-debugbar": "^2.0",
+    "barryvdh/laravel-ide-helper": "^2.0",
+    "benconstable/phpspec-laravel": "^2.0",
+    "doctrine/dbal": "^2.5",
+    "laracasts/generators": "^1.1",
+    "league/factory-muffin": "^2.1",
+    "mockery/mockery": "^0.9.4",
+    "phpspec/phpspec": "^2.2",
+    "phpunit/phpunit": "^4.6",
+    "symfony/var-dumper": "^2.6"
   },
   "autoload": {
     "classmap": [
