--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,8 @@
     }
   },
   "scripts": {
+    "test": "phpspec run -f pretty -vvv",
+    "lint": "php-cs-fixer fix",
     "post-install-cmd": [
       "php artisan clear-compiled",
       "php artisan optimize"
