--- a/circle.yml
+++ b/circle.yml
@@ -21,6 +21,7 @@ test:
     - touch database/testing.sqlite
     - php artisan migrate --env="testing"
     - php artisan migrate:refresh --env="testing"
+    - sqlite3 database/testing.sqlite .dump > tests/codeception/_data/dump.sql
   override:
     - php artisan env
     - vendor/bin/phpspec run -vvv --no-interaction --format="pretty"
