--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "mockery/mockery": "^0.9.4",
     "phpspec/phpspec": "^2.2",
     "phpunit/phpunit": "^4.6",
-    "symfony/var-dumper": "^2.6"
+    "symfony/var-dumper": "^2.6",
+    "codeception/codeception": "^2.0"
   },
   "autoload": {
     "classmap": [
