Add Codeception to CI

--- a/circle.yml
+++ b/circle.yml
@@ -25,3 +25,4 @@ test:
   override:
     - php artisan env
     - vendor/bin/phpspec run -vvv --no-interaction --format="pretty"
+    - vendor/bin/codecept run -vvv --no-interaction
