--- a/circle.yml
+++ b/circle.yml
@@ -21,6 +21,7 @@ test:
     - touch database/testing.sqlite
     - php artisan migrate --env="testing"
     - php artisan migrate:refresh --env="testing"
+    - php artisan db:seed --class="UsersTableSeeder"
     - sqlite3 database/testing.sqlite .dump > tests/codeception/_data/dump.sql
     - php artisan route:scan
   override:
